# sim-evals

./: .gitignore  README.md  pyproject.toml  run_eval.py  setup_uv.sh
src/environments/: droid_environment.py  nvidia_droid.py  robot_droid.py
src/environments/assets/: scene1.usd  scene2.usd  scene3.usd  table.usd
src/environments/mdp/: observations.py  terminations.py
src/inference/: droid_jointpos.py
